Class Search List and Department Review Changes
Submitting for Class Search List review, and code update from Department Review feedback.